# telegram_arbitrage_bot

./: .gitignore  README.md  main.py  pyproject.toml
dataset/manipulate_data/: pregame_stoiximan.json
utils/: json_utils.py
