[project]
name = "telegram_arbitrage_bot"
version = "0.1.0"
description = "Telegram bot for sports arbitrage"
requires-python = ">=3.11"
dependencies = [
    "orjson>=3.10.15",
    "polars",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
